[package]
name = "url-hash"
description = "Simple types that provide secure and stable hash values for Urls."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/url-hash/"
repository = "https://github.com/johnstonskj/rust-url-hash"
license-file = "LICENSE"
readme = "README.md"
publish = true

[dependencies]
ring = { version = "0.17.7", features = ["std"] }
url = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
